<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">都市游侠</string>
    <string name="hello_world">Hello world!</string>
    <string name="cancel">取消</string>
    <string name="colons">:</string>
    <string name="album">相册</string>
    <string name="commit">提交</string>
    <string name="comfirm">确认</string>
    <string name="activity_main_bottom_bar_home">首页</string>
    <string name="activity_main_bottom_bar_task">任务</string>
    <string name="activity_main_bottom_bar_my">我的</string>
    <string name="load_fail">不好意思加载失败了，请您稍后重试哦~</string>
    <string name="common_pop_photopicker_carema">拍照</string>
    <string name="common_pop_photopicker_album">从相册中选取</string>
    <string name="common_pop_photopicker_done">完成(0)</string>
    <string name="upload_fail">不好意思上传失败了，请您稍后重试</string>
    <string name="input_empty">输入内容不能为空哦~</string>
	
    <!-- 分享 -->
    <string name="share_app_wechat">微信好友</string>
    <string name="share_app_wechat_moments">微信朋友圈</string>
    <string name="share_app_qq">QQ好友</string>
    <string name="share_app_qzone">QQ空间</string>
    <string name="share_app_shortmessage">短信</string>
    <string name="share_app_email">邮件</string>
    <string name="share_save_local">保存到本地</string>
    <string name="share_copy">复制到剪贴板</string>
    
    <!-- 通用-->    
    <string name="common_loading">正在玩命为您加载...</string>
    <string name="common_loading_failed">不好意思加载失败了，请您稍后重试哦~</string>
    <string name="common_network_none">没有可用网络，请检查Wifi或移动网络!</string>
    <string name="common_retry">点击屏幕，重新加载</string>
    
    <string name="common_comment_send">发送</string>
    <string name="common_button_online">在线帮忙</string>
    <string name="common_button_help">立即救援</string>
    <string name="common_button_helpme">我要求助</string>
    <string name="common_solved_ahead">该求助已被</string>
	<string name="common_solved_after">解决</string>
	<string name="common_no_comment">此求助帖还没有评论哦~</string>
	<string name="common_more_comments">查看更多评论</string>
	<string name="common_more_images">查看更多图片</string>
	<string name="common_comment_success">发表评论成功啦~</string>
	<string name="common_comment_fail">不好意思，评论失败啦~</string>
	<string name="common_imageshow_retry"><u>加载失败，点击重试</u></string>
    
    <!-- 道路救援 -->
    <string name="activity_roadrescue_help">我要求助</string>
    
    <!-- 道路救援求助 -->
    <string name="roadrescue_help_title_hint">请输入标题</string>
    <string name="roadrescue_help_content_hint">请输入内容</string>
    
    <!-- 我要求助 -->
    <string name="help_abandoned">放弃本次编辑？</string>
    <string name="help_abandoned_cancel">继续编辑</string>
    <string name="help_abandoned_confirm">狠心放弃</string>

    <!-- 评论列表 -->
    <string name="activity_commentlist">评论列表</string>    

    <!-- 道路救援 -->
    <string name="activity_roadrescue">道路救援</string>
    <string name="activity_findperson">寻人</string>
    <string name="activity_findthing">寻物</string>
           
    
	<!-- 任务详情 -->
	<string name="activity_road_rescue_detail_title">道路救援详情</string>
	<string name="activity_road_rescue_detail_solved_ahead">该求助已被</string>
	<string name="activity_road_rescue_detail_solved_after">解决</string>
	<string name="activity_road_rescue_detail_no_comment">此求助帖还没有评论哦~</string>
	<string name="activity_road_rescue_detail_more_comments">查看更多评论</string>
	<string name="activity_road_rescue_detail_more_images">查看更多图片</string>
	<string name="activity_road_rescue_detail_comment_success">发表评论成功啦~</string>
	<string name="activity_road_rescue_detail_comment_fail">不好意思，评论失败啦~</string>
	
	<!-- 寻人详情 -->
	<string name="activity_findperson_detail_title">寻人详情</string>
</resources>
