<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools" tools:context="${relativePackage}.${activityClass}">
  
    <LinearLayout android:id="@+id/customer_loading"  android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center" android:orientation="horizontal" >
	    <com.youxia.widget.ScanningImageView android:layout_width="wrap_content" android:layout_height="wrap_content" />
	    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/common_margin_left" android:textSize="16sp" android:textColor="#ff919191" android:text="@string/common_loading" />
    </LinearLayout>
    
    <LinearLayout android:id="@+id/customer_loading_failed" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center" android:orientation="vertical" android:visibility="gone">
	    <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/loading_failed" />
	    <TextView  android:layout_width="wrap_content"  android:layout_height="wrap_content" android:layout_gravity="center_vertical"  android:gravity="center" android:layout_marginLeft="@dimen/common_margin_left" android:text="@string/common_loading_failed" android:textColor="#ff919191"  android:textSize="16sp" />
    </LinearLayout>

   <LinearLayout android:id="@+id/customer_network_none" android:layout_width="match_parent" android:layout_height="match_parent" android:gravity="center" android:orientation="vertical" android:visibility="gone">
	   <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/network_failed" />
	   <TextView  android:layout_width="wrap_content" android:layout_height="wrap_content"  android:text="@string/common_network_none"  android:textColor="#ff919191"  android:textSize="16sp" />
	   <TextView android:layout_width="wrap_content"  android:layout_height="wrap_content" android:text="@string/common_retry"  android:textColor="#ff919191" android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
