<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_share"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/black_50p" >
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:background="@color/white"
		android:layout_marginLeft="30dp"
		android:layout_marginRight="30dp"
		android:paddingTop="15dp"
        android:orientation="vertical">
        <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <LinearLayout 
		        android:id="@+id/popup_share_wechat_share"
		        android:layout_width="0dp"
		        android:layout_height="100dp"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:orientation="vertical">
		        <ImageView 
		            android:layout_width="64dp"
		            android:layout_height="64dp"
		            android:src="@drawable/logo_wechat"
		            android:contentDescription="@string/app_name"/>
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="14sp"
		            android:layout_marginTop="10dp"
		            android:text="@string/share_app_wechat"/>
		    </LinearLayout>
		    <LinearLayout 
		        android:id="@+id/popup_share_qq_share"
		        android:layout_width="0dp"
		        android:layout_height="100dp"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:orientation="vertical">
		        <ImageView 
		            android:layout_width="64dp"
		            android:layout_height="64dp"
		            android:src="@drawable/logo_qq"
		            android:contentDescription="@string/app_name"/>
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="14sp"
		            android:layout_marginTop="10dp"
		            android:text="@string/share_app_qq"/>
		    </LinearLayout>
		    <LinearLayout 
		        android:id="@+id/popup_share_shortmessage"
		        android:layout_width="0dp"
		        android:layout_height="100dp"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:orientation="vertical">
		        <ImageView 
		            android:layout_width="64dp"
		            android:layout_height="64dp"
		            android:src="@drawable/logo_shortmessage"
		            android:contentDescription="@string/app_name"/>
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="14sp"
		            android:layout_marginTop="10dp"
		            android:text="@string/share_app_shortmessage"/>
		    </LinearLayout>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    
		    
		    <LinearLayout 
		        android:id="@+id/popup_share_email"
		        android:layout_width="0dp"
		        android:layout_height="100dp"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:orientation="vertical">
		        <ImageView 
		            android:layout_width="64dp"
		            android:layout_height="64dp"
		            android:src="@drawable/logo_email"
		            android:contentDescription="@string/app_name"/>
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="14sp"
		            android:layout_marginTop="10dp"
		            android:text="@string/share_app_email"/>
		    </LinearLayout>
		    <LinearLayout 
		        android:id="@+id/popup_share_copy"
		        android:layout_width="0dp"
		        android:layout_height="100dp"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:orientation="vertical">
		        <ImageView 
		            android:layout_width="64dp"
		            android:layout_height="64dp"
		            android:src="@drawable/logo_copy"
		            android:contentDescription="@string/app_name"/>
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="14sp"
		            android:layout_marginTop="10dp"
		            android:text="@string/share_copy"/>
		    </LinearLayout>
		    <LinearLayout 
		        android:layout_width="0dp"
		        android:layout_height="100dp"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:orientation="vertical"/>
		</LinearLayout>
		<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:layout_marginTop="5dp"/>
<!-- 		    android:background="@color/information_title_line"/> -->
		<TextView 
		    android:id="@+id/popup_share_cancel"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="12dp"
		    android:paddingBottom="12dp"
		    android:gravity="center"
		    android:textSize="16sp"
		    android:text="@string/cancel"/>
    </LinearLayout>
    
</RelativeLayout>
